editet homepage and pictures

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul id="navigation">
                 <li>
-                    <a href="content/home.html"><i class="material-icons md-36">home</i>Home</a>
+                    <a href="content/home.html" id="home"><i class="material-icons md-36">home</i>Home</a>
                 </li>
                 <li>
                     <a href="content/appointments.html"><i class="material-icons md-36">date_range</i>Termine</a>
