--- a/content/home.html
+++ b/content/home.html
@@ -1,1 +1,22 @@
-<p>HALOOOOOO</p>
+<div class="impInf">
+    <h2>wichtige Info - bitte dringend beachten!</h2>
+    <p class="important">Die Mitgliederversammlung am 02.11.2018 wird auf den 09.11.2018 verschoben!</p>
+</div>
+<div class="infTxt">
+    <h4>Für das Jahr 2019 können bereits folgende Termine bekannt gegeben werden:</h4>
+    <ul class="announcement">
+        <li>02.02.2019 Jahreshauptversammlung und Feier anläßlich des 125-jährigen Vereinsjubiläums</li>
+        <li>02.11. bis 03.11.2019 Kreisschau und Vereinsschau</li>
+    </ul>
+    <p>
+        Der Rassegeflügelzüchterverein Jena und Umgebung e.V. von 1894 wurde am 02. Februar 1894 gegründet.
+        Damals nahmen 19 Herren aus Jena, Isserstedt, Krippendorf und Beutnitz an der Gründungsversammlung im Gasthaus "Zum Löwen" teil.
+    </p>
+    <p>
+            Derzeit zählt der Verein 28 Mitglieder und hat zahlreiche Aktivitäten vorzuweisen, von denen wir hier durch Fotos einen kleinen Eindruck vermitteln wollen.
+    </p>
+</div>
+<div id="slideshow">
+    <img src="images/begruess_1_26-07-14.jpg" id="slides">
+    <button id="test">next</button>
+</div>
